# ohtupalautusrepo

./: README.md
viikko1/nhl-statistics-1/: .coverage
viikko1/nhl-statistics-1/src/: index.py  statistics_service.py
viikko1/nhl-statistics-1/src/tests/: statistics_service_test.py
viikko2/nhl-reader/src/: index.py  player.py
viikko2/ohjelmistotuotanto-hy tehtavat main viikko2-project-reader/src/: project_reader.py
viikko2/poetry-web/: pyproject.toml
viikko3/: log.html  output.xml
viikko3/hello-robot/: report.html
viikko3/login-robot/: log.html  output.xml  report.html
viikko3/login-robot/src/: AppLibrary.py  index.py
viikko3/login-robot/src/services/: user_service.py
viikko3/login-robot/src/tests/: login.robot  register.robot
viikko3/web-login/: log.html  output.xml  report.html
viikko3/web-login/src/services/: user_service.py
viikko3/web-login/src/templates/: index.html
viikko3/web-login/src/tests/: home.robot  login.robot  register.robot  resource.robot
viikko4/: retrospective.md
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/verkkokauppa/: .coverage
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/laskin/src/: kayttoliittyma.py  sovelluslogiikka.py
viikko5/tennis/src/: tennis_game.py
viikko6/query-language/src/: index.py  matchers.py
viikko7/: merge.md
viikko7/kivi-paperi-sakset/src/: index.py  kps.py  kps_parempi_tekoaly.py  kps_pelaaja_vs_pelaaja.py  kps_tekoaly.py
