[tool.poetry]
name = "poetry-web"
version = "0.1.0"
description = ""
authors = ["Niki Hietala <niki.hietala@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
pytest = "^7.4.3"
jsonpickle = "1.3.0"
cowsay = "^6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
